Fixed wording in intro, added favicon, and made logo more legible

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -58,6 +58,7 @@ header h2 {
 a.logo {
   color: #fff;
   text-decoration: none;
+  letter-spacing: 2px;
 
   &:hover, &:focus, &:active {
     text-decoration: none;
